# data-analytics-project-100

./: .env  1step.ipynb  2step.ipynb  3step.ipynb  4step.ipynb  5step.ipynb  README.md  charts_project.ipynb  conversion.json  pyproject.toml
.ipynb_checkpoints/: charts_project-checkpoint.ipynb
charts/: ads.json
tmp/artifacts/: conversion.json
