[tool.poetry]
name = "data-analytics-project-100"
version = "0.1.0"
description = ""
authors = ["katherib <katherib@student.21-school.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
